путь к фновой картинке

--- a/css/block/_hero.scss
+++ b/css/block/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url('../../img/hero.png') center top / cover no-repeat;
+  background: url('./../../img/hero.png') center top / cover no-repeat;
   
   min-height: 650px;
 
