путь к фновой картинке hero

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ ul {
 }
 
 .hero {
-  background: url("./../../img/hero.png") center top/cover no-repeat;
+  background: url("../img/hero.png") center top/cover no-repeat;
   min-height: 650px;
 }
 .hero-content {
