секция приветсвия на весь экран

--- a/css/block/_hero.scss
+++ b/css/block/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background: url('../img/hero.png') center top / cover no-repeat;
-  
+  height: 100vh;
   min-height: 650px;
 
   &-content {
