--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ h2 {
 
 .hero {
   background: url("../img/hero.png") center top/cover no-repeat;
+  height: 100vh;
   min-height: 650px;
 }
 .hero-content {
