секция Почему PixelPerfect

--- a/css/block/_section.scss
+++ b/css/block/_section.scss
@@ -50,10 +50,10 @@
     position: relative;
 
     &::before {
-      content: url('../../img/separator.png');
+      content: url('../img/separator.png');
       position: absolute;
       padding-top: 50px;
-      transform: translate(160%);
+      transform: translate(165%);
       width: 100px;
       height: 50px;
     }
