первая-третья секция

--- a/css/block/_hero.scss
+++ b/css/block/_hero.scss
@@ -106,6 +106,10 @@
   line-height: 18px;
   margin-top: 39px;
   margin-bottom: 64px;
+  &-price{
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .advantages {
