--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,10 @@
 @import 'base/base';
 @import 'block/hero';
 @import 'block/section';
-@import 'block/info';
+@import 'block/board';
+@import 'block/team';
+@import 'block/slider';
+
 
 
 
