--- a/css/block/_board.scss
+++ b/css/block/_board.scss
@@ -47,7 +47,8 @@ margin-bottom: 24px;
 }
 .board__pic{
   background: url('../../img/bgboard.png') no-repeat;
-  rotate: 45deg;
+  
+  background-position: 10%;
 }
 .feature{
   margin-left: 80px;
