--- a/css/block/_slider.scss
+++ b/css/block/_slider.scss
@@ -1,5 +1,5 @@
-// .slider{
-//   background: url('../../img/bgslider.png');
-//   width: 100%;
-//   height: 652px;
-// }
+.slider{
+  background: url('../../img/bgslider.png');
+  width: 100%;
+  height: 652px;
+}
