background для доски

--- a/css/block/_board.scss
+++ b/css/block/_board.scss
@@ -46,7 +46,7 @@ margin-bottom: 24px;
   }
 }
 .board__pic{
-  background: url('../../img/bgboard.png') no-repeat;
+  background: url('.././img/bgboard.png') no-repeat;
   
   background-position: 10%;
 }
