--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ h2 {
 }
 
 .board__pic {
-  background: url("../../img/bgboard.png") no-repeat;
+  background: url(".././img/bgboard.png") no-repeat;
   background-position: 10%;
 }
 
@@ -362,7 +362,7 @@ h2 {
 }
 
 .slider {
-  background: url("../../img/bgslider.png");
+  background: url(".././img/bgslider.png");
   width: 100%;
   height: 652px;
 }
